--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "functions": {
-    "api/index.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
+  "dependencies": {
+    "puppeteer-core": "22.6.0",
+    "@sparticuz/chromium-min": "123.0.1"
   }
 }
