--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "engines": {
-    "node": "18.x"
-  },
+  "name": "render-scraper",
   "dependencies": {
-    "puppeteer-core": "21.5.0",
-    "@sparticuz/chromium-min": "119.0.2"
+    "puppeteer-core": "latest",
+    "@sparticuz/chromium": "latest"
   }
 }
